--- a/package.json
+++ b/package.json
@@ -17,8 +17,11 @@
   },
   "dependencies": {
     "apollo-server": "^2.19.0",
+    "bcrypt": "^5.0.0",
     "graphql": "^15.4.0",
     "graphql-tools": "^7.0.1",
+    "jsonwebtoken": "^8.5.1",
+    "lodash": "^4.17.20",
     "pg": "^8.4.2",
     "pg-hstore": "^2.3.3",
     "sequelize": "5.22.3",
