--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "nodemon": "^2.0.6"
   },
   "dependencies": {
+    "@babel/register": "^7.12.1",
     "apollo-server": "^2.19.0",
     "bcrypt": "^5.0.0",
     "graphql": "^15.4.0",
@@ -25,6 +26,6 @@
     "pg": "^8.4.2",
     "pg-hstore": "^2.3.3",
     "sequelize": "5.22.3",
-    "sequelize-cli": "5.5.1"
+    "sequelize-cli": "^5.5.1"
   }
 }
